--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <ul class="nav nav-pills nav-justified">
                         <li>
                             <a href="https://arxiv.org/abs/2111.12077">
-                            <image src="img/360_paper_image.jpg" height="60px">
+                            <image src="img/mip_paper_image.jpg" height="60px">
                                 <h4><strong>Paper</strong></h4>
                             </a>
                         </li>
