--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         </br>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <video id="v0" width="100%" autoplay loop muted controls>
-                  <source src="https://youtu.be/kI0R-sVZhDc" type="video/mp4" />
-                </video>
+                <iframe width="100%" height="315"
+                src="https://www.youtube.com/watch?v=kI0R-sVZhDc">
+                </iframe>
 						</div>
             <div class="col-md-8 col-md-offset-2">
 							<p class="text-center">
