--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <iframe width="420" height="315"
-                src="https://www.youtube.com/watch?v=kI0R-sVZhDc">
+                src="https://youtu.be/kI0R-sVZhDc">
                 </iframe>
 						</div>
             <div class="col-md-8 col-md-offset-2">
