--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         </br>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <iframe width="420" height="315"
-                src="https://youtu.be/kI0R-sVZhDc">
+                <iframe width="100%" height="315"
+                src="https://www.youtube.com/watch?v=kI0R-sVZhDc">
                 </iframe>
 						</div>
             <div class="col-md-8 col-md-offset-2">
